--- a/src/app/pages/occurrence-detail/occurrence-detail.component.html
+++ b/src/app/pages/occurrence-detail/occurrence-detail.component.html
@@ -1,3 +1,39 @@
-<p>
-  occurrence-detail works! {{id}}
-</p>
+
+<div class="container-fluid">
+  <div class="row">
+
+    <div class="col-sm">
+      <ul class="list-inline">
+        <li class="list-inline-item"><img src="{{iconPath + occurrence.status.pinName}}" width="20"/></li>
+        <li class="list-inline-item">{{occurrence.status.name}}</li>
+      </ul>
+
+      <dl class="row">
+        <dt class="col-sm-3">Quando</dt>
+        <dd class="col-sm-9">{{occurrence.occurrenceDate}}</dd>
+
+        <dt class="col-sm-3">Local</dt>
+        <dd class="col-sm-9">{{occurrence.location}}</dd>
+
+        <dt class="col-sm-3">Detalhes</dt>
+        <dd class="col-sm-9">{{occurrence.description}}</dd>
+
+        <dt class="col-sm-3">Registrado por</dt>
+        <dd class="col-sm-9">{{occurrence.name}}</dd>
+
+      </dl>
+
+    </div>
+
+    <div class="col-lg">
+
+        <div class="col" *ngFor="let image of occurrence.pathPhoto">
+          <a href="{{image}}">
+            <img  src="{{image}}" class="img-thumbnail">
+          </a>
+        </div>
+
+    </div>
+
+  </div>
+</div>
