Visual: Ícone #8 e  Conteúdo: Inicial #7

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer">
   <div class="container">
-    <span class="text-muted">Ciclistas de São José dos Campos</span>
+    <span class="text-muted">Ciclistas de São José dos Campos - Todos os direitos reservados ao direito de ir e vir</span>
   </div>
 </footer>
