--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,8 +2,8 @@
   <h5 class="my-0 mr-md-auto font-weight-normal">Como anda a ciclovia?</h5>
   <nav class="my-2 my-md-0 mr-md-3">
     <a class="p-2 text-dark" href="#">home</a>
-    <a class="p-2 text-dark" href="occurrences">inserir ponto no mapa</a>
     <a class="p-2 text-dark" href="whoami">quem Somos?</a>
     <a class="p-2 text-dark" href="#">dê um feedback</a>
+    <a class="p-2 text-danger" href="occurrences">[+inserir ponto no mapa]</a>
   </nav>
 </div>
