--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid">
   <div class="row">
-    
+
     <div class="col-sm" *ngIf="occurrences">
 
-      <h2>Como ta a situação da ciclovia de sua cidade</h2>
+      <h2>Como anda a ciclovia da sua cidade?</h2>
 
       <p class="lead">
-        Esse mapa foi feito para você que anda de bike postar qualquer incidente que encontrar enquanto estiver dando o rolê.
+        Esse mapa foi feito para você, que anda de bike ou outro modal, postar qualquer incidente que encontrar enquanto estiver dando o rolê.
       </p>
 
       <hr />
