--- a/src/app/pages/whoami/whoami.component.html
+++ b/src/app/pages/whoami/whoami.component.html
@@ -9,8 +9,8 @@
       <h4>Equipe</h4>
 
       <dl class="row">
-          <dt class="col-sm-3">Pedro Hos</dt>
-          <dd class="col-sm-9">Agricultor, Codeiro e Socialista que acredita que podemos mudar tudo com Dados Abertos</dd>
+          <dt class="col-sm-3">Pedro Hos (@pedro_hosilva)</dt>
+          <dd class="col-sm-9">Agricultor e Codeiro que acredita que podemos mudar tudo com Dados Abertos</dd>
           <dt class="col-sm-3">Marcell Marra</dt>
           <dd class="col-sm-9">Mais um latino americano</dd>
       </dl>
