Conteúdo: Dê um Feedback #5

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,6 @@
 <footer class="footer">
   <div class="container">
-    <span class="text-muted">Ciclistas de São José dos Campos - Todos os direitos reservados ao direito de ir e vir</span>
+    <hr />
+    <p class="text-muted text-center">Ciclistas de São José dos Campos - Todos os direitos reservados ao direito de ir e vir</p>
   </div>
 </footer>
