--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
   <nav class="my-2 my-md-0 mr-md-3">
     <a class="p-2 text-dark" href="#">home</a>
     <a class="p-2 text-dark" href="whoami">quem Somos?</a>
-    <a class="p-2 text-dark" href="#">dê um feedback</a>
+    <a class="p-2 text-dark" href="feedback">dê um feedback</a>
     <a class="p-2 text-danger" href="occurrences">[+inserir ponto no mapa]</a>
   </nav>
 </div>
