Alterar BD pra MariaDB #5 / Add security com JAAS #4 / Conteúdo: Inserir Ponto no Mapa #6

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,6 +4,6 @@
     <a class="p-2 text-dark" href="#">home</a>
     <a class="p-2 text-dark" href="whoami">quem Somos?</a>
     <a class="p-2 text-dark" href="feedback">dê um feedback</a>
-    <a class="p-2 text-danger" href="occurrences">[+inserir ponto no mapa]</a>
+    <a class="btn btn-outline-danger btn-sm" href="occurrences">+inserir ponto no mapa</a>
   </nav>
 </div>
