--- a/src/app/pages/whoami/whoami.component.html
+++ b/src/app/pages/whoami/whoami.component.html
@@ -1,21 +1,39 @@
 <div class="container-fluid">
-      <p class="text-justify">
-          Somos uma iniciativa de pessoas que querem andar livremente com seus variados
-          tipos de modais por todas as cidades do Brasil. O objetivo dessa ferramenta é dar visibilidade
-          à necessidades de manutenção, reparação e até mesmo a criação de ciclovias,
-          questões presenciados durante nossas locomoções pela cidade.
-      </p>
 
-      <h4>Equipe</h4>
+    <h3>o projeto</h3>
+
+    <br>
+
+    <div class="row">
+      <div class="col-sm">
+        <div class="jumbotron jumbotron-fluid">
+          <p class="text-danger text-center">
+            <strong>
+              Somos uma iniciativa de pessoas que querem andar com segurança,
+              liberdade e tranquilidade em nossos variados tipos de modais, seja onde for.
+            </strong>
+          </p>
+
+          <p class="text-center">
+            Nosso principal objetivo com o projeto “Como anda a Ciclovia?” é garantir o direito de ir e vir com saúde
+            e bem-estar. Por outro lado, queremos pressionar as autoridades competentes a tomarem medidas
+            necessárias para quaisquer problemas envolvendo ciclovias e, é claro, darmos visibilidade a meios
+            alternativos de transporte que garantem mobilidade a muitas pessoas.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <h3>quem somos?</h3> <br>
 
       <dl class="row">
-          <dt class="col-sm-3">Pedro Hos (@pedro_hosilva)</dt>
-          <dd class="col-sm-9">Agricultor e Codeiro que acredita que podemos mudar tudo com Dados Abertos</dd>
+          <dt class="col-sm-3">Pedro Hos</dt>
+          <dd class="col-sm-9">Escolheu a lutar pela utopia</dd>
           <dt class="col-sm-3">Marcell Marra</dt>
           <dd class="col-sm-9">Mais um latino americano</dd>
       </dl>
 
-      <h4>Apoio</h4>
+      <h2>parceiros</h2>
 
-      <p>Ciclistas de São José do Campos</p>
+      <p>Coletivo de Ciclistas de São José do Campos</p>
 </div>
